--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-cheerio": "^1.0.0",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^6.2.0",
+    "gulp-newer": "^1.4.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
