--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "csscomb": "^4.3.0"
   },
   "devDependencies": {
+    "autoprefixer": "^9.7.4",
+    "browserslist": "^4.8.6",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
