--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.7.4",
+    "browser-sync": "^2.26.7",
     "browserslist": "^4.8.6",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
