--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-cheerio": "^1.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^6.2.0",
     "gulp-newer": "^1.4.0",
@@ -22,6 +23,7 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-svgstore": "^7.0.1",
+    "gulp-uglify": "^3.0.2",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^8.0.0"
   },
