--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "imagemin-pngquant": "^8.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./node_modules/.bin/gulp"
   },
   "repository": {
     "type": "git",
