--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "gulp-svgstore": "^7.0.1",
     "gulp-uglify": "^3.0.2",
     "imagemin-mozjpeg": "^8.0.0",
-    "imagemin-pngquant": "^8.0.0"
+    "imagemin-pngquant": "^8.0.0",
+    "mkdirp": "^1.0.3"
   },
   "config": {
     "directories": {
