--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   "config": {
     "directories": {
       "source": "./src",
-      "build": "./build",
-      "blocks": "./src/blocks"
+      "build": "./build"
     }
   },
   "scripts": {
