--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
+    "gh-pages": "^2.2.0",
     "gulp": "^4.0.2",
     "gulp-cheerio": "^1.0.0",
     "gulp-concat": "^2.6.1",
