--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {
     "autoprefixer": "^9.7.4",
     "browser-sync": "^2.26.7",
-    "browserslist": "^4.8.6",
+    "browserslist": "^4.9.1",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
@@ -28,7 +28,10 @@
     "gulp-uglify": "^3.0.2",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^8.0.0",
-    "mkdirp": "^1.0.3"
+    "mkdirp": "^1.0.3",
+    "stylelint": "^13.2.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-scss": "^3.14.2"
   },
   "config": {
     "directories": {
@@ -38,7 +41,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/gulp"
+    "start": "./node_modules/.bin/gulp",
+    "scss-lint": "stylelint ./src/**/*.scss",
+    "precommit": "npm run scss-lint"
   },
   "repository": {
     "type": "git",
