--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "^9.7.4",
     "browser-sync": "^2.26.7",
     "browserslist": "^4.9.1",
+    "cross-env": "^7.0.2",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
@@ -42,7 +43,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "./node_modules/.bin/gulp",
-    "scss-lint": "stylelint ./src/**/*.scss"
+    "scss-lint": "stylelint ./src/**/*.scss",
+    "deploy": "cross-env NODE_ENV=production ./node_modules/.bin/gulp build && cross-env ./node_modules/.bin/gulp deploy"
   },
   "repository": {
     "type": "git",
