--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
     }
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=production ./node_modules/.bin/gulp",
-    "scss-lint": "stylelint ./src/**/*.scss",
-    "deploy": "cross-env NODE_ENV=production ./node_modules/.bin/gulp build && cross-env ./node_modules/.bin/gulp deploy"
+    "test": "stylelint ./src/**/*.scss",
+    "build": "cross-env NODE_ENV=production npm start build",
+    "deploy": "cross-env NODE_ENV=production ./node_modules/.bin/gulp build && cross-env ./node_modules/.bin/gulp deploy",
+    "precommit": "npm test"
   },
   "repository": {
     "type": "git",
