--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ node_modules/
 npm-debug.*
 build/
 Thumbs.db
+src/scss/style.scss
+src/blocks/sprite-svg/img/sprite-svg.svg
+src/blocks/sprite-png/sprite-png.scss
+src/blocks/sprite-png/img/sprite-*.png
