--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
       "./src/sass/variables.scss",
       "./src/sass/mixins.scss",
       "./src/sass/fonts.scss"
-
     ],
     "addCssAfter": [
       "./src/sass/scaffolding.scss"
@@ -32,7 +31,7 @@
       "./src/js/global-script.js"
     ],
     "addImages": [
-      "./src/img/*.{jpg,jpeg,gif,png,svg}"
+      "./src/img/*.{jpg,jpeg,gif,png,svg,ico}"
     ],
     "copiedCss": [],
     "copiedJs": [],
@@ -72,6 +71,7 @@
     "husky": "^4.2.3",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^8.0.0",
+    "lint-staged": "^10.0.8",
     "merge-stream": "^2.0.0",
     "mkdirp": "^1.0.3",
     "stylelint": "^13.2.1",
@@ -88,8 +88,13 @@
   },
   "scripts": {
     "start": "gulp",
-    "test": "stylelint \"./src/**/*.scss\"",
+    "test": "stylelint \"./src/**/*.scss\" --syntax=scss",
+    "lint-staged": "lint-staged",
+    "precommit": "lint-staged",
     "build": "cross-env NODE_ENV=production npm start build",
     "deploy": "cross-env NODE_ENV=production ./node_modules/.bin/gulp build && cross-env ./node_modules/.bin/gulp deploy"
+  },
+  "lint-staged": {
+    "*.scss": "stylelint --syntax=scss"
   }
 }
