--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
   "scripts": {
     "start": "gulp",
     "test": "stylelint \"./src/**/*.scss\" --syntax=scss",
-    "precommit": "test",
+    "precommit": "npm test",
     "build": "cross-env NODE_ENV=production npm start build",
     "deploy": "cross-env NODE_ENV=production ./node_modules/.bin/gulp build && cross-env ./node_modules/.bin/gulp deploy"
   },
