попытка сделать прекоммит линтинг

--- a/package.json
+++ b/package.json
@@ -90,7 +90,6 @@
     "start": "gulp",
     "test": "stylelint \"./src/**/*.scss\" --syntax=scss",
     "precommit": "npm test",
-    "lint-staged": "lint-staged",
     "build": "cross-env NODE_ENV=production npm start build",
     "deploy": "cross-env NODE_ENV=production ./node_modules/.bin/gulp build && cross-env ./node_modules/.bin/gulp deploy"
   },
@@ -99,7 +98,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npm test"
     }
   }
 }
