--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ src/scss/style.scss
 src/blocks/sprite-svg/img/sprite-svg.svg
 src/blocks/sprite-png/sprite-png.scss
 src/blocks/sprite-png/img/sprite-*.png
+package-lock.json
