--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "url": "https://github.com//alekseyburn/ab-start-project.git"
   },
   "author": "Aleksey Korshakov",
-  "license": "ISC",
   "dependencies": {
-    "csscomb": "^4.3.0"
+    "csscomb": "^4.3.0",
+    "svg4everybody": "^2.1.9"
   },
   "devDependencies": {
     "autoprefixer": "^9.7.4",
@@ -22,7 +22,6 @@
     "del": "^5.1.0",
     "gh-pages": "^2.2.0",
     "gulp": "^4.0.2",
-    "gulp-cheerio": "^1.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
@@ -44,15 +43,8 @@
     "mkdirp": "^1.0.3",
     "stylelint": "^13.2.1",
     "stylelint-config-standard": "^20.0.0",
-    "stylelint-scss": "^3.15.0",
-    "svg4everybody": "^2.1.9",
+    "stylelint-scss": "^3.16.0",
     "vinyl-buffer": "^1.0.1"
-  },
-  "config": {
-    "directories": {
-      "source": "./src",
-      "build": "./build"
-    }
   },
   "scripts": {
     "start": "gulp",
