--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
+    "gulp-real-favicon": "^0.3.2",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-size": "^3.0.0",
