--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ src/blocks/sprite-svg/img/sprite-svg.svg
 src/blocks/sprite-png/sprite-png.scss
 src/blocks/sprite-png/img/sprite-*.png
 package-lock.json
+faviconData.json
