--- a/package.json
+++ b/package.json
@@ -3,19 +3,39 @@
   "version": "1.0.0",
   "description": "Установка: выполнить в папке проекта: `npm i`.",
   "main": "gulpfile.js",
+  "author": "Aleksey Korshakov",
   "repository": {
     "type": "git",
     "url": "https://github.com//alekseyburn/ab-start-project.git"
   },
-  "author": "Aleksey Korshakov",
+  "scripts": {
+    "start": "gulp",
+    "test:style": "stylelint \"src/**/*.scss\" --syntax=scss",
+    "test:editorconfig": "editorconfig-cli src/**/*.{pug}",
+    "build": "cross-env NODE_ENV=production npm start build",
+    "deploy": "cross-env NODE_ENV=production ./node_modules/.bin/gulp build && cross-env ./node_modules/.bin/gulp deploy",
+    "lint-staged": "lint-staged"
+  },
+  "lint-staged": {
+    "*.scss": "stylelint --syntax=scss",
+    "*.pug": "editorconfig-cli",
+    "*.css": "stylelint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test && gulp test:pug"
+    }
+  },
   "dependencies": {
     "csscomb": "^4.3.0",
+    "object-fit-images": "^3.2.4",
     "svg4everybody": "^2.1.9"
   },
   "devDependencies": {
-    "autoprefixer": "^9.7.4",
+    "@htmlacademy/editorconfig-cli": "^1.0.0",
+    "autoprefixer": "^9.7.5",
     "browser-sync": "^2.26.7",
-    "browserslist": "^4.10.0",
+    "browserslist": "^4.11.0",
     "cross-env": "^7.0.2",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
@@ -23,11 +43,15 @@
     "gh-pages": "^2.2.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
+    "gulp-html-beautify": "^1.0.1",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-newer": "^1.4.0",
+    "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
+    "gulp-pug": "^4.0.1",
+    "gulp-pug-lint": "^0.1.6",
     "gulp-real-favicon": "^0.3.2",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
@@ -35,31 +59,19 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-svgstore": "^7.0.1",
     "gulp-uglify": "^3.0.2",
+    "gulp-wait2": "0.0.5",
     "gulp.spritesmith": "^6.11.0",
     "husky": "^4.2.3",
-    "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^8.0.0",
-    "lint-staged": "^10.0.8",
+    "lint-staged": "^10.0.9",
     "merge-stream": "^2.0.0",
     "mkdirp": "^1.0.3",
+    "postcss-import": "^12.0.1",
+    "postcss-inline-svg": "^4.1.0",
+    "postcss-object-fit-images": "^1.1.2",
     "stylelint": "^13.2.1",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.16.0",
     "vinyl-buffer": "^1.0.1"
-  },
-  "scripts": {
-    "start": "gulp",
-    "test": "stylelint \"./src/**/*.scss\" --syntax=scss",
-    "precommit": "npm test",
-    "build": "cross-env NODE_ENV=production npm start build",
-    "deploy": "cross-env NODE_ENV=production ./node_modules/.bin/gulp build && cross-env ./node_modules/.bin/gulp deploy"
-  },
-  "lint-staged": {
-    "*.scss": "stylelint --syntax=scss"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm test"
-    }
   }
 }
