--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test && gulp test:pug"
+      "pre-commit": "lint-staged && gulp test:pug"
     }
   },
   "dependencies": {
@@ -51,7 +51,7 @@
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-pug": "^4.0.1",
-    "gulp-pug-lint": "^0.1.6",
+    "gulp-pug-lint": "git+https://github.com/nicothin/gulp-pug-lint.git",
     "gulp-real-favicon": "^0.3.2",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
