--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ npm-debug.*
 build/
 Thumbs.db
 src/scss/style.scss
+src/pug/mixins.pug
 src/blocks/sprite-svg/img/sprite-svg.svg
 src/blocks/sprite-png/sprite-png.scss
 src/blocks/sprite-png/img/sprite-*.png
