добавил npm задачу запуска оптимизации картинок

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:style": "stylelint \"src/**/*.scss\" --syntax=scss",
     "test:editorconfig": "editorconfig-cli src/**/*.pug",
     "test": "npm run test:style && npm run test:editorconfig && npm run build",
+    "img-opt": "cross-env folder=src/img npm start img:opt",
     "build": "cross-env NODE_ENV=production npm start build",
     "deploy": "cross-env NODE_ENV=production ./node_modules/.bin/gulp build && cross-env ./node_modules/.bin/gulp deploy",
     "lint-staged": "lint-staged"
