--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "autoprefixer": "^9.7.5",
     "browser-sync": "^2.26.7",
     "browserslist": "^4.11.0",
+    "chalk": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
+    "get-classes-from-html": "^1.0.1",
     "gh-pages": "^2.2.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
@@ -73,6 +75,7 @@
     "stylelint": "^13.2.1",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.16.0",
+    "through2": "^3.0.1",
     "vinyl-buffer": "^1.0.1"
   }
 }
