--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ node_modules/
 npm-debug.*
 build/
 Thumbs.db
-src/scss/style.scss
+src/sass/style.scss
 src/pug/mixins.pug
 src/blocks/sprite-svg/img/sprite-svg.svg
 src/blocks/sprite-png/sprite-png.scss
