--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && gulp test:pug"
+      "pre-commit": "lint-staged"
     }
   },
   "dependencies": {
@@ -47,6 +47,7 @@
     "gh-pages": "^2.2.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
+    "gulp-debug": "^4.0.0",
     "gulp-html-beautify": "^1.0.1",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
@@ -57,6 +58,7 @@
     "gulp-pug": "^4.0.1",
     "gulp-pug-lint": "git+https://github.com/nicothin/gulp-pug-lint.git",
     "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.5",
@@ -66,6 +68,7 @@
     "gulp.spritesmith": "^6.11.0",
     "husky": "^4.2.3",
     "imagemin-pngquant": "^8.0.0",
+    "json-format": "^1.0.1",
     "lint-staged": "^10.0.9",
     "merge-stream": "^2.0.0",
     "mkdirp": "^1.0.3",
