--- a/package.json
+++ b/package.json
@@ -34,11 +34,15 @@
     "svg4everybody": "^2.1.9"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.9.0",
     "@htmlacademy/editorconfig-cli": "^1.0.0",
     "autoprefixer": "^9.7.5",
+    "babelify": "^10.0.0",
     "browser-sync": "^2.26.7",
+    "browserify": "^16.5.0",
     "browserslist": "^4.11.0",
     "chalk": "^3.0.0",
+    "cpy": "^8.1.0",
     "cross-env": "^7.0.2",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
@@ -79,6 +83,7 @@
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.16.0",
     "through2": "^3.0.1",
-    "vinyl-buffer": "^1.0.1"
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
