--- a/package.json
+++ b/package.json
@@ -52,13 +52,13 @@
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-debug": "^4.0.0",
-    "gulp-html-beautify": "^1.0.1",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
+    "gulp-pretty-html": "^2.0.10",
     "gulp-pug": "^4.0.1",
     "gulp-pug-lint": "git+https://github.com/nicothin/gulp-pug-lint.git",
     "gulp-rename": "^2.0.0",
