--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
   "scripts": {
     "start": "gulp",
     "test:style": "stylelint \"src/**/*.scss\" --syntax=scss",
-    "test:editorconfig": "editorconfig-cli src/**/*.pug",
-    "test": "npm run test:style && npm run test:editorconfig && npm run build",
-    "img-opt": "cross-env folder=src/img npm start img:opt",
     "build": "cross-env NODE_ENV=production npm start build",
     "deploy": "cross-env NODE_ENV=production ./node_modules/.bin/gulp build && cross-env ./node_modules/.bin/gulp deploy",
     "lint-staged": "lint-staged"
@@ -37,10 +34,9 @@
     "@babel/preset-env": "^7.9.0",
     "@htmlacademy/editorconfig-cli": "^1.0.0",
     "autoprefixer": "^9.7.5",
-    "babelify": "^10.0.0",
+    "babel-loader": "^8.1.0",
     "browser-sync": "^2.26.7",
-    "browserify": "^16.5.0",
-    "browserslist": "^4.11.0",
+    "browserslist": "^4.11.1",
     "chalk": "^3.0.0",
     "cpy": "^8.1.0",
     "cross-env": "^7.0.2",
@@ -73,9 +69,10 @@
     "husky": "^4.2.3",
     "imagemin-pngquant": "^8.0.0",
     "json-format": "^1.0.1",
-    "lint-staged": "^10.0.9",
+    "lint-staged": "^10.1.0",
     "merge-stream": "^2.0.0",
     "mkdirp": "^1.0.3",
+    "path": "^0.12.7",
     "postcss-import": "^12.0.1",
     "postcss-inline-svg": "^4.1.0",
     "postcss-object-fit-images": "^1.1.2",
@@ -84,6 +81,8 @@
     "stylelint-scss": "^3.16.0",
     "through2": "^3.0.1",
     "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-source-stream": "^2.0.0",
+    "webpack": "^4.42.1",
+    "webpack-stream": "^5.2.1"
   }
 }
