добавил таски deploy, отрефакторил запись файлов scss,js, сборку scss,js

--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,8 @@ Thumbs.db
 
 src/js/entry.js
 src/pug/mixins.pug
-
+src/sass/style.scss
 src/blocks/sprite-svg/img/sprite.svg
 src/blocks/sprite-png/sprite-png.scss
 src/blocks/sprite-png/img/sprite-*.png
 package-lock.json
-faviconData.json
