--- a/.stylelintrc
+++ b/.stylelintrc
@@ -9,7 +9,8 @@
   "rules": {
     "declaration-empty-line-before" : null,
     "at-rule-no-unknown" : null,
-    "scss/at-rule-no-unknown" : true
+    "scss/at-rule-no-unknown" : true,
+    "block-no-empty": null
   }
 }
 
