--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "lint-staged": {
     "*.scss": "stylelint --syntax=scss",
-    "*.pug": "editorconfig-cli",
-    "*.css": "stylelint"
+    "*.{js,pug,md}": "editorconfig-cli",
+    "*.pug": "pug-lint"
   },
   "husky": {
     "hooks": {
@@ -31,13 +31,13 @@
     "svg4everybody": "^2.1.9"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@htmlacademy/editorconfig-cli": "^1.0.0",
     "autoprefixer": "^9.7.5",
     "babel-loader": "^8.1.0",
     "browser-sync": "^2.26.7",
     "browserslist": "^4.11.1",
-    "chalk": "^3.0.0",
     "cpy": "^8.1.0",
     "cross-env": "^7.0.2",
     "css-mqpacker": "^7.0.0",
@@ -48,27 +48,20 @@
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-debug": "^4.0.0",
-    "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
-    "gulp-newer": "^1.4.0",
-    "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-pretty-html": "^2.0.10",
     "gulp-pug": "^4.0.1",
-    "gulp-pug-lint": "git+https://github.com/nicothin/gulp-pug-lint.git",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
-    "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-svgstore": "^7.0.1",
     "gulp-uglify": "^3.0.2",
-    "gulp-wait2": "0.0.5",
     "gulp.spritesmith": "^6.11.0",
     "husky": "^4.2.3",
     "imagemin-pngquant": "^8.0.0",
-    "json-format": "^1.0.1",
     "lint-staged": "^10.1.0",
     "merge-stream": "^2.0.0",
     "mkdirp": "^1.0.3",
@@ -76,12 +69,12 @@
     "postcss-import": "^12.0.1",
     "postcss-inline-svg": "^4.1.0",
     "postcss-object-fit-images": "^1.1.2",
+    "pug-lint": "^2.6.0",
     "stylelint": "^13.2.1",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.16.0",
     "through2": "^3.0.1",
     "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0",
     "webpack": "^4.42.1",
     "webpack-stream": "^5.2.1"
   }
