--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "scripts": {
     "start": "gulp",
     "test:style": "stylelint \"src/**/*.scss\" --syntax=scss",
-    "build": "cross-env NODE_ENV=production npm start build",
-    "deploy": "cross-env NODE_ENV=production ./node_modules/.bin/gulp build && cross-env ./node_modules/.bin/gulp deploy",
+    "test:js": "eslint src/blocks/**/*.js src/js/**/*.js",
+    "build": "gulp build",
+    "deploy": "cross-env ./node_modules/.bin/gulp build && cross-env ./node_modules/.bin/gulp deploy",
     "lint-staged": "lint-staged"
   },
   "lint-staged": {
     "*.scss": "stylelint --syntax=scss",
     "*.{js,pug,md}": "editorconfig-cli",
-    "*.pug": "pug-lint"
+    "*.pug": "pug-lint",
+    "*.js": "eslint"
   },
   "husky": {
     "hooks": {
@@ -35,6 +37,7 @@
     "@babel/preset-env": "^7.9.0",
     "@htmlacademy/editorconfig-cli": "^1.0.0",
     "autoprefixer": "^9.7.5",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "browser-sync": "^2.26.7",
     "browserslist": "^4.11.1",
@@ -43,6 +46,7 @@
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
+    "eslint": "^6.8.0",
     "get-classes-from-html": "^1.0.1",
     "gh-pages": "^2.2.0",
     "gulp": "^4.0.2",
@@ -54,7 +58,6 @@
     "gulp-pretty-html": "^2.0.10",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-svgstore": "^7.0.1",
