доработал тесты в package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "start": "gulp",
-    "test": "stylelint \"src/**/*.scss\" --syntax=scss && eslint src/blocks/**/*.js src/js/**/*.js",
+    "test": "npm run test:pug && npm run test:style && npm run test:js",
+    "test:pug": "glob-exec \"src/**/*.pug\" -- \"pug-lint {{files.join(' ')}}\"",
     "test:style": "stylelint \"src/**/*.scss\" --syntax=scss",
     "test:js": "eslint src/blocks/**/*.js src/js/**/*.js",
     "build": "gulp build",
@@ -50,6 +51,7 @@
     "eslint": "^6.8.0",
     "get-classes-from-html": "^1.0.1",
     "gh-pages": "^2.2.0",
+    "glob-exec": "^0.1.1",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-debug": "^4.0.0",
@@ -66,7 +68,7 @@
     "gulp.spritesmith": "^6.11.0",
     "husky": "^4.2.3",
     "imagemin-pngquant": "^8.0.0",
-    "lint-staged": "^10.1.0",
+    "lint-staged": "^10.1.1",
     "merge-stream": "^2.0.0",
     "mkdirp": "^1.0.3",
     "path": "^0.12.7",
