--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "test:js": "eslint src/blocks/**/*.js src/js/**/*.js",
     "build": "gulp build",
     "deploy": "cross-env gulp build && gulp deploy",
+    "img:opt": "gulp optimizeImages",
+    "critical": "gulp criticalCssToHtml",
     "lint-staged": "lint-staged"
   },
   "lint-staged": {
@@ -44,6 +46,7 @@
     "browser-sync": "^2.26.7",
     "browserslist": "^4.11.1",
     "cpy": "^8.1.0",
+    "critical": "^1.3.9",
     "cross-env": "^7.0.2",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
@@ -66,6 +69,7 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-svgstore": "^7.0.1",
     "gulp-uglify": "^3.0.2",
+    "gulp-webp": "^4.0.1",
     "gulp.spritesmith": "^6.11.0",
     "husky": "^4.2.3",
     "imagemin-pngquant": "^8.0.0",
